postgresql-common (48) unstable; urgency=low

  *

 -- Martin Pitt <mpitt@debian.org>  Mon, 20 Mar 2006 19:19:54 +0100

postgresql-common (47) unstable; urgency=low

  * debian/control: Have p-client-common Replace: all versions of
    postgresql-common; this is a quick workaround for a dpkg bug (orphaned
    conffiles cause package conflicts). Closes: #357909, #357910

 -- Martin Pitt <mpitt@debian.org>  Mon, 20 Mar 2006 19:12:29 +0100

postgresql-common (46) unstable; urgency=low

  * t/020_create_sql_remove.t: Make check of pg_maintenance output stricter to
    catch things like taint errors.
  * PgCommon.pm, get_versions() and get_version_clusters(): Check return
    values to untaint them. Fixes taint error in pg_maintenance (and maybe
    some more). Closes: #357237
  * debian/control: Bump lsb-base dependency to >= 3.0-3 to ensure that
    log_daemon_msg() and friends are available. Closes: #357108

 -- Martin Pitt <mpitt@debian.org>  Tue, 14 Mar 2006 22:59:03 +0100

postgresql-common (45) experimental; urgency=low

  * PgCommon.pm, read_conf_file(): Allow '.' characters in configuration keys.
    Closes: #352524
  * debian/rules: Move pg_ctlcluster, pg_createcluster, pg_dropcluster, and
    pg_upgradecluster man pages from section 1 to 8, since they are only for
    administrators.
  * Split off a new package postgresql-client-common. This is to avoid having
    cron jobs, logrotate scripts, etc. if only the client apps are installed
    on a box. (https://launchpad.net/bugs/34167)
  * debian/postgresql-client-common.{pre,post}inst: Migrate user_clusters
    conffile from postgresql-common to avoid dpkg questions.

 -- Martin Pitt <mpitt@debian.org>  Tue, 14 Mar 2006 22:43:04 +0100

postgresql-common (44) unstable; urgency=low

  * PgCommon.pm, change_ugid(): Fix the order of $< and $> assignment so that
    we don't trash the saved uid and can switch back later. This allows us to
    make use of this function in the test suite, too.